@@ -546,9 +546,13 @@ public class EventClient {
         final Event event = new Event("com/openexchange/groupware/folder/update", ht);
         triggerEvent(event);
         if (null != newFolder && FolderObject.INFOSTORE == newFolder.getModule()) {
-            triggerEvent(new Event(FileStorageEventConstants.UPDATE_FOLDER_TOPIC, getEventProperties(newFolder)));
+            Dictionary<String, Object> properties = getEventProperties(newFolder);
+            if (null != oldFolder && oldFolder.getParentFolderID() != newFolder.getParentFolderID()) {
+                properties.put(FileStorageEventConstants.OLD_PARENT_FOLDER_ID, String.valueOf(oldFolder.getParentFolderID()));
+            }
+            triggerEvent(new Event(FileStorageEventConstants.UPDATE_FOLDER_TOPIC, properties));
         }
-        
+
         final EventObject eventObject = new EventObject(newFolder, CHANGED, session);
         EventQueue.add(eventObject);
     }
