@@ -1,3 +1,7 @@
+* 2014-04-29 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 32221: Supply reference to old parent folder ID in folder update event
+
 * 2014-04-29 - thorben.betten@open-xchange.com
 
  - Fix for bug 32211: Removed usage of removed String constructor in JSON bundle + Proper reflection-wise look-up of "extendedProvider" field in Java8
